fix gaps and fix btn

--- a/src/sass/blocks/_contacts.sass
+++ b/src/sass/blocks/_contacts.sass
@@ -61,7 +61,7 @@
         color: rgba(255, 255, 255, 0.4)
         letter-spacing: 1px
         font-weight: bold
-        width: 80px
+        width: 90px
         background: none
         border: none
         border-bottom: 3px solid rgba(255, 255, 255, 0.4)
@@ -106,7 +106,8 @@
         span
             position: relative
             cursor: pointer
-            display: flex
+            display: grid
+            grid-template: 1fr / repeat(3, auto)
             align-items: center
             gap: 5px
             width: fit-content
@@ -139,7 +140,6 @@
             border: 0
             margin: 0 15px 0 0
             cursor: pointer
-            background: #000
             display: grid
             align-items: center
             &::before,
