--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -13,8 +13,9 @@
         margin-top: 55px
         &__container
             position: relative
-            display: flex
+            display: grid
             gap: 30px
+            grid-template: auto / repeat(5, 1fr)
             left: -330px
         &__column
             display: grid
